falcon-7b-instruct-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: workspace-falcon-7b-instruct-service
  namespace: kube-system
  labels:
    app: ai-toolchain-operator
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8887
    protocol: TCP
    name: http
  selector:
    kaito.sh/workspace: workspace-falcon-7b-instruct
